--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
                     </section>
                 </section>
 
+                <div class="div__container">
+                    <div class="products"></div>
+                </div>        
+                
+                <div class="contentCart">
+                    <div class="cartProduct"></div>
+                    <div class="cartTotal"></div>
+                </div>
+
                 <section class="product__details">
                     <section class="product__details-img">
                             <img src="./src/img/img/featured1.png" alt="Coat-00H1">
