ajustes del js con css (Heri)

--- a/index.html
+++ b/index.html
@@ -83,89 +83,13 @@
                     </section>
                 </section>
 
-                <div class="div__container">
-                    <div class="products"></div>
-                </div>        
-                
-                <div class="contentCart">
-                    <div class="cartProduct"></div>
-                    <div class="cartTotal"></div>
-                </div>
-
-                <section class="product__details">
-                    <section class="product__details-img">
-                            <img src="./src/img/img/featured1.png" alt="Coat-00H1">
-                            <section class="product__details-img-details">
-                                <section class="product__details-img-details-title flex">
-                                    <h3 class="product__details-price"><i class='bx bxs-badge-dollar'></i>14.00</h3>
-                                    <p class="categories-details">Lorem.</p>
-                                </section>
-                                <section class="paragraph">
-                                    <h3 class="product__details-price-name">Hoodies</h3>
-                                </section>
-                            </section>
+                <section class="product__details"></section>       
+                <section class="contentCart">
+                    <section class="contentCart__close">
+                        <p><i class='bx bx-x'></i></p>
                     </section>
-                    <section class="product__details-img">
-                        <img src="./src/img/img/featured3.png" alt="Coat-00H1">
-                        <section class="product__details-img-details">
-                            <section class="product__details-img-details-title flex">
-                                <h3 class="product__details-price"><i class='bx bxs-badge-dollar'></i>24.00</h3>
-                                <p class="categories-details">Lorem.</p>
-                            </section>
-                            <section class="paragraph">
-                                <h3 class="product__details-price-name">Hoodies Rocky</h3>
-                            </section>
-                        </section>
-                    </section>
-                    <section class="product__details-img">
-                        <img src="./src/img/img/featured2.png" alt="Coat-00H1">
-                        <section class="product__details-img-details">
-                            <section class="product__details-img-details-title flex">
-                                <h3 class="product__details-price"><i class='bx bxs-badge-dollar'></i>24.00</h3>
-                                <p class="categories-details">Lorem.</p>
-                            </section>
-                            <section class="paragraph">
-                                <h3 class="product__details-price-name">Sweatshirt</h3>
-                            </section>
-                        </section>
-                    </section>
-
-                    <section class="product__details-img">
-                        <img src="./src/img/img/featured1.png" alt="Coat-00H1">
-                        <section class="product__details-img-details">
-                            <section class="product__details-img-details-title flex">
-                                <h3 class="product__details-price"><i class='bx bxs-badge-dollar'></i>14.00</h3>
-                                <p class="categories-details">Lorem.</p>
-                            </section>
-                            <section class="paragraph">
-                                <h3 class="product__details-price-name">Hoodies</h3>
-                            </section>
-                        </section>
-                </section>
-                <section class="product__details-img">
-                    <img src="./src/img/img/featured3.png" alt="Coat-00H1">
-                    <section class="product__details-img-details">
-                        <section class="product__details-img-details-title flex">
-                            <h3 class="product__details-price"><i class='bx bxs-badge-dollar'></i>24.00</h3>
-                            <p class="categories-details">Lorem.</p>
-                        </section>
-                        <section class="paragraph">
-                            <h3 class="product__details-price-name">Hoodies Rocky</h3>
-                        </section>
-                    </section>
-                </section>
-                <section class="product__details-img">
-                    <img src="./src/img/img/featured2.png" alt="Coat-00H1">
-                    <section class="product__details-img-details">
-                        <section class="product__details-img-details-title flex">
-                            <h3 class="product__details-price"><i class='bx bxs-badge-dollar'></i>24.00</h3>
-                            <p class="categories-details">Lorem.</p>
-                        </section>
-                        <section class="paragraph">
-                            <h3 class="product__details-price-name">Sweatshirt</h3>
-                        </section>
-                    </section>
-                </section>
+                    <section class="cartProduct"></section>
+                    <section class="cartTotal"></section>
                 </section>
             </section>
         </section>
