Funsionalidad de filtrado (Heri)

--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
             
             <section id="products" class="body__products flex">
                 <section class="product__search">
-                    <section class="product__search-categories">
+                    <section class="product__search-categories" data-filter= "all">
                         <h3 class="categories-name">Show All</h3>
                         <p class="categories-details">Show all products</p>
                     </section>
-                    <section class="product__search-categories">
+                    <section class="product__search-categories" data-filter= ".filter-0">
                         <h3 class="categories-name">Hoodies</h3>
-                        <p class="categories-details">Lorem ipsum dolor sit.</p>
+                        <p class="categories-details"># Products</p>
                     </section>
-                    <section class="product__search-categories">
-                        <h3 class="categories-name">Shirts</h3>
-                        <p class="categories-details">Lorem ipsum dolor sit.</p>
+                    <section class="product__search-categories" data-filter= ".filter-1">
+                        <h3 class="categories-name">Hoodies Rocky</h3>
+                        <p class="categories-details"># Products</p>
                     </section>
-                    <section class="product__search-categories">
+                    <section class="product__search-categories" data-filter= ".filter-2">
                         <h3 class="categories-name">Sweatshirts</h3>
-                        <p class="categories-details">Lorem ipsum dolor sit.</p>
+                        <p class="categories-details"># Products</p>
                     </section>
                 </section>
 
@@ -133,6 +133,7 @@
 
     </section>
 
+    <script src="./src/js/mixitup.min.js"></script>
     <script src="./src/js/main.js"></script>
 </body>
 </html>
