agregue la cantidad de productos al icono del carrito

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                             <i class='bx bx-moon'></i>
                         </section>
                         <section class="navbar__car-items-bag">
-                            <i class='bx bx-shopping-bag'></i>
+                            <i class='bx bx-shopping-bag'>
+                                <span class="cartAmount"></span>
+                            </i>
+                                
                         </section>
                     </section>
                 </section>
@@ -98,7 +101,8 @@
             <section class="footer__information">
                 <h3 class="footer__information-title">Our information</h3>
                 <br>
-                <p class="footer__information-info">Santo Domingo - Rep. Dom.</p>
+                <p class="footer__information-info">H.E. Santo Domingo - Rep. Dom.</p>
+                <p class="footer__information-info">D.J. Cochabamba - Bolivia</p>
             </section>
             <section class="footer__information">
                 <h3 class="footer__information-title">About Us</h3>
@@ -128,7 +132,7 @@
         
         <section class="footer__bottom">
             <hr>
-            <p><i class='bx bxs-copyright'></i> ING. Espinosa. All rigths reserved</p>
+            <p><i class='bx bxs-copyright'></i> ING. Espinosa and Jaldin. All rigths reserved</p>
         </section>
 
     </section>
