Terminacion del Responsive (Heri)

--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
                     <section class="contentCart__close">
                         <p><i class='bx bx-x'></i></p>
                     </section>
-                    <section class="cartProduct"></section>
+                    <section class="cartProduct">
+                        <section class="cartProductempty flex">
+                            <img src="./src/img/img/empty-cart.png" alt="Empty">
+                        </section>
+                    </section>
                     <section class="cartTotal"></section>
                 </section>
             </section>
@@ -123,9 +127,9 @@
                     <h3 class="footer__information-title">Social</h3>
                     <br>
                 <section class="footer__information-social flex">
-                    <p class="footer__information-info"><i class='bx bxl-facebook-circle'></i></p>
-                    <p class="footer__information-info"><i class='bx bxl-instagram-alt' ></i></p>
-                    <p class="footer__information-info"><i class='bx bxl-twitter' ></i></p> 
+                    <p class="footer__information-info"><a href="http://facebook.com" target="_blank"><i class='bx bxl-facebook-circle'></i></a></p>
+                    <p class="footer__information-info"><a href="http://instagram.com" target="_blank"><i class='bx bxl-instagram-alt' ></i></a></p>
+                    <p class="footer__information-info"><a href="http://twitter.com" target="_blank"><i class='bx bxl-twitter' ></i></a></p> 
                 </section>
             </section>
         </footer>
