Terminacion del Responsive (Heri)

--- a/index.html
+++ b/index.html
@@ -91,11 +91,7 @@
                     <section class="contentCart__close">
                         <p><i class='bx bx-x'></i></p>
                     </section>
-                    <section class="cartProduct">
-                        <section class="cartProductempty flex">
-                            <img src="./src/img/img/empty-cart.png" alt="Empty">
-                        </section>
-                    </section>
+                    <section class="cartProduct"></section>
                     <section class="cartTotal"></section>
                 </section>
             </section>
@@ -120,7 +116,7 @@
                 <h3 class="footer__information-title">Product</h3>
                 <br>
                 <p class="footer__information-info">Hoodies</p>
-                <p class="footer__information-info">Shirts</p>
+                <p class="footer__information-info">Hoodies Rocky</p>
                 <p class="footer__information-info">Sweatshirts</p>
             </section>
             <section class="footer__information">
