--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <section class="product__details"></section>       
                 <section class="contentCart">
                     <section class="contentCart__close">
-                        <p><i class='bx bx-x'></i></p>
+                        <span><i class='bx bx-x'></i></span>
                     </section>
                     <section class="cartProduct"></section>
                     <section class="cartTotal"></section>
